--- a/index.html
+++ b/index.html
@@ -9,7 +9,22 @@
 
 </head>
 <body>
+    <header>
+        <div class="my-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <h2 class="text-center">Our Team</h2>
+                        <p class="text-center">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut autem rem adipisci non vero eaque magni blanditiis error consectetur? Deserunt nemo quisquam, soluta illo tenetur eius dicta animi voluptatibus consectetur.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <main>
 
+    </main>
+    <footer></footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
