--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="./css/style.css">
 
 </head>
-<body>
-    <header>
+<body>   
         <div class="my-5">
             <div class="container">
                 <div class="row">
@@ -18,13 +17,23 @@
                         <p class="text-center">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut autem rem adipisci non vero eaque magni blanditiis error consectetur? Deserunt nemo quisquam, soluta illo tenetur eius dicta animi voluptatibus consectetur.</p>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="team-card bg-dark" >
+                            <row class="info ">
+                                <div class="col-3 bg-dark"></div>
+                                <div class="col-9"></div>
+                            </row>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-    </header>
-    <main>
+    
+    
 
-    </main>
-    <footer></footer>
+ 
+   
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
