--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
                 <div class="row">
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="team-card bg-dark" >
-                            <row class="info ">
-                                <div class="col-3 bg-dark"></div>
-                                <div class="col-9"></div>
+                            <row class="info d-flex">
+                                <div class="col-3 bg-dark">
+                                    <img src="./img/female1.png" alt="">
+                                </div>
+                                <div class="col-9">dsdsdsd</div>
                             </row>
                         </div>
                     </div>
