[bonus] provo responsive bonus card

--- a/index.html
+++ b/index.html
@@ -19,12 +19,62 @@
                 </div>
                 <div class="row">
                     <div class="col-12 col-md-6 col-lg-4">
-                        <div class="team-card bg-dark" >
+                        <div class="team-card bg-dark " >
                             <row class="info d-flex">
                                 <div class="col-3 bg-dark">
-                                    <img src="./img/female1.png" alt="">
+                                    <img src="./img/female1.png" alt="team1">
                                 </div>
-                                <div class="col-9">dsdsdsd</div>
+                                <div class="col-9">222</div>
+                            </row>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="team-card bg-dark " >
+                            <row class="info d-flex">
+                                <div class="col-3 bg-dark">
+                                    <img src="./img/female1.png" alt="team1">
+                                </div>
+                                <div class="col-9">222</div>
+                            </row>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="team-card bg-dark " >
+                            <row class="info d-flex">
+                                <div class="col-3 bg-dark">
+                                    <img src="./img/female1.png" alt="team1">
+                                </div>
+                                <div class="col-9">222</div>
+                            </row>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="team-card bg-dark " >
+                            <row class="info d-flex">
+                                <div class="col-3 bg-dark">
+                                    <img src="./img/female1.png" alt="team1">
+                                </div>
+                                <div class="col-9">222</div>
+                            </row>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="team-card bg-dark " >
+                            <row class="info d-flex">
+                                <div class="col-3 bg-dark">
+                                    <img src="./img/female1.png" alt="team1">
+                                </div>
+                                <div class="col-9">222</div>
+                            </row>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="team-card bg-dark " >
+                            <row class="info d-flex">
+                                <div class="col-3 bg-dark">
+                                    <img src="./img/female1.png" alt="team1">
+                                </div>
+                                <div class="col-9">222</div>
                             </row>
                         </div>
                     </div>
