[UPD] interno card

--- a/index.html
+++ b/index.html
@@ -19,62 +19,17 @@
                 </div>
                 <div class="row">
                     <div class="col-12 col-md-6 col-lg-4">
-                        <div class="team-card bg-dark " >
+                        <div class="team-card bg-dark text-white" >
                             <row class="info d-flex">
-                                <div class="col-3 bg-dark">
-                                    <img src="./img/female1.png" alt="team1">
+                                <div class="col-3">
+                                    <img src="./img/female1.png" class="img-fluid" alt="team1">
                                 </div>
-                                <div class="col-9">222</div>
-                            </row>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6 col-lg-4">
-                        <div class="team-card bg-dark " >
-                            <row class="info d-flex">
-                                <div class="col-3 bg-dark">
-                                    <img src="./img/female1.png" alt="team1">
+                                <div class="col-9 p-2"><b>LAURA ROSSI</b>
+                                    <br>
+                                    Designer
+                                    <br>
+                                    <a href="laurarossi@team.com">laurarossi@team.com</a>
                                 </div>
-                                <div class="col-9">222</div>
-                            </row>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6 col-lg-4">
-                        <div class="team-card bg-dark " >
-                            <row class="info d-flex">
-                                <div class="col-3 bg-dark">
-                                    <img src="./img/female1.png" alt="team1">
-                                </div>
-                                <div class="col-9">222</div>
-                            </row>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6 col-lg-4">
-                        <div class="team-card bg-dark " >
-                            <row class="info d-flex">
-                                <div class="col-3 bg-dark">
-                                    <img src="./img/female1.png" alt="team1">
-                                </div>
-                                <div class="col-9">222</div>
-                            </row>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6 col-lg-4">
-                        <div class="team-card bg-dark " >
-                            <row class="info d-flex">
-                                <div class="col-3 bg-dark">
-                                    <img src="./img/female1.png" alt="team1">
-                                </div>
-                                <div class="col-9">222</div>
-                            </row>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6 col-lg-4">
-                        <div class="team-card bg-dark " >
-                            <row class="info d-flex">
-                                <div class="col-3 bg-dark">
-                                    <img src="./img/female1.png" alt="team1">
-                                </div>
-                                <div class="col-9">222</div>
                             </row>
                         </div>
                     </div>
