--- a/index.html
+++ b/index.html
@@ -18,21 +18,24 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-12 col-md-6 col-lg-4">
-                        <div class="team-card bg-dark text-white" >
-                            <row class="info d-flex">
+                    <!-- <div class="col-12 col-md-6 col-lg-4">
+                        <div class="team-card text-white" >
+                            <row class="info d-flex bg-dark">
                                 <div class="col-3">
                                     <img src="./img/female1.png" class="img-fluid" alt="team1">
                                 </div>
-                                <div class="col-9 p-2"><b>LAURA ROSSI</b>
-                                    <br>
-                                    Designer
-                                    <br>
+                                <div class="col-9 text-right p-1">
+                                    <p class="mb-0">
+                                        <b>LAURA ROSSI</b>
+                                    </p>                                                                         
+                                    <p class="mb-0">
+                                        Designer
+                                    </p>                                    
                                     <a href="laurarossi@team.com">laurarossi@team.com</a>
                                 </div>
                             </row>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
