[UPD] inserisco le card tramide dom

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
                         <p class="text-center">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut autem rem adipisci non vero eaque magni blanditiis error consectetur? Deserunt nemo quisquam, soluta illo tenetur eius dicta animi voluptatibus consectetur.</p>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row" id="team-members"> 
                     <!-- <div class="col-12 col-md-6 col-lg-4">
                         <div class="team-card text-white" >
-                            <row class="info d-flex bg-dark">
+                            <div class=" row info d-flex bg-dark">
                                 <div class="col-3">
                                     <img src="./img/female1.png" class="img-fluid" alt="team1">
                                 </div>
@@ -33,7 +33,7 @@
                                     </p>                                    
                                     <a href="laurarossi@team.com">laurarossi@team.com</a>
                                 </div>
-                            </row>
+                            </div>
                         </div>
                     </div> -->
                 </div>
