[FIX] aggiusto padding/margin e scritta h1

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h2 class="text-center">Our Team</h2>
+                        <h1 class="text-center">meet our Team</h1>
                         <p class="text-center">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut autem rem adipisci non vero eaque magni blanditiis error consectetur? Deserunt nemo quisquam, soluta illo tenetur eius dicta animi voluptatibus consectetur.</p>
                     </div>
                 </div>
